Fix navbar collapse dark mode bug

--- a/src/css/_nav.scss
+++ b/src/css/_nav.scss
@@ -64,7 +64,6 @@ body.dark {
 
   .nav-colored {
     background: $navBG-dark;
-    .navbar-collapse {background-color: $navBG-dark;}
   }
 
   .navbar {
